--- a/configs/blog.yml
+++ b/configs/blog.yml
@@ -1,8 +1,7 @@
 uwsgi:
-    plugins: python
     socket: /tmp/blog.sock
     master: 1
-    daemonize: /home/taras1k/Projects/blog/log/uwsgi.log
-    wsgi-file: /home/taras1k/Projects/blog/main_app.py
-    pythonpath: /home/taras1k/Projects/blog
-    virtualenv: /home/taras1k/.virtualenvs/blog
+    daemonize: /var/www/blog/log/uwsgi.log
+    wsgi-file: /var/www/blog/main_app.py
+    pythonpath: /var/www/Projects/blog
+    virtualenv: /root/.virtualenvs/blog
